--- a/style/categories/edit-category.css
+++ b/style/categories/edit-category.css
@@ -131,16 +131,6 @@ span.edit-nm-count {
   margin-right: 10px;
 }
 
-
-.edit-category .edit-form::-webkit-scrollbar-thumb {
-  background-color: #ddd;
-  border-radius: 10px;
-}
-
-.edit-category .edit-form::-webkit-scrollbar-thumb:hover {
-  background-color: #dcd6d6;
-}
-
 #color-picker.CP2 {
   margin-bottom: 5px;
 }
