--- a/style/common/common.css
+++ b/style/common/common.css
@@ -122,21 +122,34 @@ body.no-scroll {
   user-select: none;
 }
 
-::-webkit-scrollbar {
+body::-webkit-scrollbar {
   width: 8px;
+  height: 8px;
 }
-
-::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track {
   background-color: var(--primary);
 }
-
-::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
   background-color: var(--secondary);
-  border-radius: 10px;
+  border-radius: 4px;
+}
+body::-webkit-scrollbar-thumb:hover {
+  background-color: var(--secondary-min8);
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+::-webkit-scrollbar-track {
+  background-color: var(--scrollTrack);
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--scrollThumb);
+  border-radius: 4px;
+}
 ::-webkit-scrollbar-thumb:hover {
-  background-color: var(--secondary-min8);
+  background-color: var(--scrollHover);
 }
 
 
@@ -214,9 +227,10 @@ body.no-scroll {
 
   ::-webkit-scrollbar {
     width: 5px;
+    height: 5px;
   }
   ::-webkit-scrollbar-thumb {
-    border-radius: 7px;
+    border-radius: 3px;
   }
 }
 
