--- a/style/common/sidebar.css
+++ b/style/common/sidebar.css
@@ -233,16 +233,6 @@
   font-size: 12px;
 }
 
-
-#sidebar::-webkit-scrollbar-thumb {
-  background-color: #ddd;
-  border-radius: 10px;
-}
-
-#sidebar::-webkit-scrollbar-thumb:hover {
-  background-color: #dcd6d6;
-}
-
 @media only screen and (max-width: 812px) {
   #sidebar {
     width: 300px;
