--- a/style/home/edit-task.css
+++ b/style/home/edit-task.css
@@ -166,15 +166,6 @@ span.nm-count, span.des-count {
 }
 
 
-.edit-task .form::-webkit-scrollbar-thumb {
-  background-color: #ddd !important;
-  border-radius: 10px;
-}
-
-.edit-task .form::-webkit-scrollbar-thumb:hover {
-  background-color: #dcd6d6 !important;
-}
-
 @media only screen and (max-width: 500px) {
   .form {
     padding: 0 15px 5px;
