--- a/style/home/home.css
+++ b/style/home/home.css
@@ -277,13 +277,13 @@ body.no-scroll .add-btn {
 
 main .categories {
   margin-top: 20px;
+  padding-bottom: 7px;
   display: none; /*flex*/
   align-items: center;
   justify-content: start;
   width: 80%;
   column-gap: 10px;
-  flex-wrap: wrap;
-  row-gap: 10px;
+  overflow-x: auto;
 }
 
 .categories .category-emoji {
@@ -572,7 +572,6 @@ main .categories {
   background: transparent;
 }
 
-
 .menubar .options div {
   display: flex;
   align-items: center;
@@ -659,16 +658,6 @@ main .categories {
   transition: opacity 0.6s ease;
   cursor: pointer;
 }
-
-.menubar .options::-webkit-scrollbar-thumb {
-  background-color: #ddd !important;
-  border-radius: 10px;
-}
-
-.menubar .options::-webkit-scrollbar-thumb:hover {
-  background-color: #dcd6d6;
-}
-
 
 .menubar.active {
   visibility: visible;
@@ -960,6 +949,7 @@ span.highlighted-text {
 
   main .categories {
     margin-top: 16px;
+    padding-bottom: 4px;
   }
   .categories div {
     padding: 4px 8px;
