--- a/style/home/recieved-task.css
+++ b/style/home/recieved-task.css
@@ -153,16 +153,6 @@
 }
 
 
-.recieved-task .recieved-body::-webkit-scrollbar-thumb {
-  background-color: #ddd !important;
-  border-radius: 10px;
-}
-
-.recieved-task .recieved-body::-webkit-scrollbar-thumb:hover {
-  background-color: #dcd6d6 !important;
-}
-
-
 @media only screen and (min-width: 700px) {
   .recieved-task {
     width: 600px;
