--- a/style/home/share-task.css
+++ b/style/home/share-task.css
@@ -312,17 +312,6 @@
 }
 
 
-
-.share-task .share-body::-webkit-scrollbar-thumb {
-  background-color: #ddd !important;
-  border-radius: 10px;
-}
-
-.share-task .share-body::-webkit-scrollbar-thumb:hover {
-  background-color: #dcd6d6 !important;
-}
-
-
 @media only screen and (min-width: 700px) {
   .share-task {
     width: 600px;
